--- a/templates/katzen_demo/base.html.twig
+++ b/templates/katzen_demo/base.html.twig
@@ -13,5 +13,7 @@
   {% block main_content %}
   <p>This page intentionally left blank.</p>
   {% endblock %}
+
+  {% include 'katzen_demo/waitlist_popup.html.twig' %}
 </body>
 </html>
