Katzen Import updates to support end-to-end creation through LocationExtractor

--- a/templates/katzen/import/plan.html.twig
+++ b/templates/katzen/import/plan.html.twig
@@ -304,7 +304,7 @@
                 </tr>
               </thead>
               <tbody>
-                {% for assignment in detection.headerAssignments %}
+                {% for assignment in detection.header_assignments %}
                   <tr>
                     <td>
                       <code>{{ assignment.header }}</code>
