Seer Design: style updates and bones for seer_waitlist

--- a/templates/seer/base.html.twig
+++ b/templates/seer/base.html.twig
@@ -24,6 +24,7 @@
     <main>
         {% block main_content %}{% endblock %}
     </main>
-    </div>
+  </div>
+    {% include 'seer/waitlist_popup.html.twig' %}
   </body>
   </html>
